# shell

./: .editorconfig  .gitignore  Makefile  Pipfile  ansible.cfg  pyproject.toml  readme.md  requirements.txt
.github/: dependabot.yml  mergify.yml
.github/workflows/: codeql-analysis.yml  shellcheck.yml  wemake.yml
ansible/: db-maintenance.yml
ansible/distro-vars/: Ubuntu-22.yml
ansible/inventory/: test
ansible/inventory/group_vars/: all  dbservers  test  webservers
php/: check-mail.php
python/: OsModule.py  SysModule.py
python/admin/: nginx_load_test.py
python/mastodon/: get-all-followers.py
scripts/: async_deploy.sh  bump  find-loadbalancer-classes.sh  init_example.sh  remote.sh
scripts/admin/: get_devices.sh  log4j.sh  nginx_load_test.sh  php-rocky.sh
scripts/magento/: dump_to_remote.sh  make_dump  source_db.sh  start_magento.sh
scripts/tmp/: files_to_array.sh  logger.sh  read_line.sh  read_lines_from_file.sh
scripts/utils/: _colors.sh  _get_info.sh  _init.sh
srv/: get_devices.sh  hello.sh  log4j.sh  php-rocky.sh  read_line.sh
srv/utils/: _general.sh  _init.sh  _shell.sh  _who.sh
